--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <h1>My<span>Book</span>List</h1>
+        <form>
+            <label for="title">Title:</label>
+            <input type="text" id="name">
+            <label for="author">Author:</label>
+            <input type="text" id="author">
+            <label for="isbn">Isbn:</label>
+            <input type="text" id="isbn">
+            <input type="submit" value="submit">
+        </form>
+        <table class="table">
+            <thead>
+                <th>
+                    <tr>TTitle</tr>
+                    <tr>Author</tr>
+                    <tr>Isbn</tr>
+                </th>
+            </thead>
+        </table>
+    </div>
 
 
 
