input and table

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         </form>
         <table class="table">
             <thead>
-                <th>
-                    <tr>TTitle</tr>
-                    <tr>Author</tr>
-                    <tr>Isbn</tr>
-                </th>
+                <tr>
+                    <th>TTitle</th>
+                    <th>Author</th>
+                    <th>Isbn</th>
+                </tr>
             </thead>
         </table>
     </div>
