styling input and table

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>TTitle</th>
+                    <th>Title</th>
                     <th>Author</th>
                     <th>Isbn</th>
                 </tr>
             </thead>
+            <tbody></tbody>
         </table>
     </div>
 
