--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>My<span>Book</span>List</h1>
         <form>
             <label for="title">Title:</label>
-            <input type="text" id="name">
+            <input type="text" id="title">
             <label for="author">Author:</label>
             <input type="text" id="author">
             <label for="isbn">Isbn:</label>
@@ -26,9 +26,17 @@
                     <th>Title</th>
                     <th>Author</th>
                     <th>Isbn</th>
+                    <th></th>
                 </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+                <tr>
+                    <td>Title</td>
+                    <td>Author</td>
+                    <td>Isbn</td>
+                    <td>hnjhh</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 
